--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <h3 id="ajax-text"></h3>
     <button id="ajax-btn">SEND AJAX Request</button>
 
+<section>
+    <table id="customer-table">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Phone</th>
+            <th>Email</th>
+        </tr>
+        </thead>
+        <tbody class="table-row"></tbody>
+    </table>
+</section>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 <!--<script>-->
@@ -50,7 +65,6 @@
     $(`#ajax-btn`).click(function (){
         $.ajax({
             url: "db.txt",
-            // method: "PUT",
             success: function (result) {
                 // console.log(result);
                 $(`#ajax-text`).html(result)
@@ -60,6 +74,28 @@
             }
         });
     });
+
+
+    $(document).ready(function () {
+        $.ajax({
+            url: "database.json",
+            method: "GET",
+            success: function (result) {
+                $.each(result, function (index, value) {
+                    $(`.table-row`).append(`
+                        <tr>
+                            <td>${value.name}</td>
+                            <td>${value.address[0].no},${value.address[0].street},${value.address[0].province}</td>
+                            <td>${value.phone}</td>
+                            <td>${value.email}</td>
+                        </tr>
+                    `);
+                });
+            }
+        });
+    });
+
+
 </script>
 </body>
 </html>
