--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
     </table>
 </section>
 
-
+    <section>
+        <table id="json-table">
+            <thead>
+            <tr>
+                <th>UserId</th>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Body</th>
+            </tr>
+            </thead>
+            <tbody class="json-row"></tbody>
+        </table>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 <!--<script>-->
@@ -95,7 +107,24 @@
         });
     });
 
-
+    $(document).ready(function () {
+        $.ajax({
+            url: "https://jsonplaceholder.typicode.com/posts",
+            method: "GET",
+            success: function (result) {
+                $.each(result, function (index, value) {
+                    $(`.json-row`).append(`
+                        <tr>
+                            <td>${value.userId}</td>
+                            <td>${value.id}</td>
+                            <td>${value.title}</td>
+                            <td>${value.body}</td>
+                        </tr>
+                    `);
+                });
+            }
+        });
+    });
 </script>
 </body>
 </html>
